--- a/templates/data_display_page.html
+++ b/templates/data_display_page.html
@@ -4,7 +4,7 @@
 Generated on {{ date_generated }} 
 <br/>
 
-<img src="{{ img_url }}" alt="{{ img_url }}" width="500" height="600">
+<img src="{{ img_url }}" alt="{{ img_url }}" width="{{ img_w }}" height="{{ img_h }}">
 <br/>
 
 Click <a href="{{ home_link }}">here</a> to go home.
