--- a/templates/style.css
+++ b/templates/style.css
@@ -1,3 +1,12 @@
 .dot {
       fill-opacity: 0.1;
   }
+
+.line {
+        fill: none;
+        stroke-width: 4px;
+        }
+.axis path, .tick line {
+    fill: none;
+    stroke: #333;
+}
