--- a/templates/addnew.html
+++ b/templates/addnew.html
@@ -9,4 +9,12 @@
     <script lang="javascript">const sidebar = new Sidebar({menu_options: {{menu_options|safe}}});</script>
     
     This is the addnew page.
+
+   <div>
+    <form action="." method="POST">
+        <textarea name="textbox1" placeholder="Enter a comment"></textarea>
+        <input type="submit" value="Post comment">
+    </form>
+    </div> 
+
 </body>
