--- a/templates/log.html
+++ b/templates/log.html
@@ -9,4 +9,5 @@
     <script lang="javascript">const sidebar = new Sidebar({menu_options: {{menu_options|safe}}});</script>
     
     This is the log page.
+    {{data.content}}
 </body>
