--- a/templates/addnew.html
+++ b/templates/addnew.html
@@ -11,7 +11,7 @@
     This is the addnew page.
 
    <div>
-    <form action="." method="POST">
+       <form action="{{url_for('add_new')}}" method="POST">
         <textarea name="textbox1" placeholder="Enter a comment"></textarea>
         <input type="submit" value="Post comment">
     </form>
