--- a/templates/log.html
+++ b/templates/log.html
@@ -9,5 +9,9 @@
     <script lang="javascript">const sidebar = new Sidebar({menu_options: {{menu_options|safe}}});</script>
     
     This is the log page.
-    {{data.content}}
+    <ul>
+        {% for item in data %}
+            <li>{{item.content}}</li>
+        {% endfor %}
+    </ul>
 </body>
