--- a/templates/addnew.html
+++ b/templates/addnew.html
@@ -8,7 +8,7 @@
 <body>
     <script lang="javascript">const sidebar = new Sidebar({menu_options: {{menu_options|safe}}});</script>
     
-    This is the addnew page.
+    <div class="pagetitle"> add new </div>
 
    <div>
        <form action="{{url_for('add_new')}}" method="POST">
