--- a/templates/home.html
+++ b/templates/home.html
@@ -8,5 +8,5 @@
 <body>
     <script lang="javascript">const sidebar = new Sidebar({menu_options: {{menu_options|safe}}});</script>
     
-    This is the main page.
+    <div class="pagetitle"> home </div>
 </body>
