--- a/templates/plots.html
+++ b/templates/plots.html
@@ -11,6 +11,8 @@
 <body>
     <script lang="javascript">const sidebar = new Sidebar({menu_options: {{menu_options|safe}}});</script>
 
+    <div class="pagetitle"> plots </div>
+
     <!-- plots -->
     <div id="div_2016"></div>
     <script lang="javascript">
