--- a/templates/log.html
+++ b/templates/log.html
@@ -8,7 +8,7 @@
 <body>
     <script lang="javascript">const sidebar = new Sidebar({menu_options: {{menu_options|safe}}});</script>
     
-    This is the log page.
+    <div class="pagetitle"> log </div>
     <ul>
         {% for item in data[::-1] %}
             <li>{{item.content}}</li>
