--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
+body {background-color: #e6f7ff;}
+
 .pagetitle {
    position: fixed;
    top:10px;
@@ -5,6 +7,8 @@
    font-size: 250%;
    color: #47476b;
    font-family: sans-serif;
+   font-weight: bold;
+   opacity: 0.5;
 }
 
 
@@ -18,7 +22,7 @@
   left: 0;
   background-color: #111; /* Black*/
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
+  padding-top: 5%; /* Place content 60px from the top */
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
 
@@ -26,7 +30,8 @@
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 240%;
+  font-family: sans-serif;
   color: #818181;
   display: block;
   transition: 0.3s;
@@ -42,7 +47,7 @@
   position: absolute;
   top: 0;
   right: 25px;
-  font-size: 36px;
+  font-size: 400%;
   margin-left: 50px;
 }
 
@@ -53,7 +58,9 @@
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+/*
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+*/
